--- a/sub/risk_html.css
+++ b/sub/risk_html.css
@@ -2,6 +2,10 @@ a { color:#FFFFFF; }
 a:visited { color:#FFFFFF; } 
 a:active { color:#0080FF; } 
 a:hover { color:#0080FF; } 
+		a.wsp5e11d928{ color:#000000; text-decoration: none} 
+		a.wsp5e11d928:visited{ color:#000000; text-decoration: none} 
+		a.wsp5e11d928:active{ color:#0080FF; text-decoration: none} 
+		a.wsp5e11d928:hover{ color:#0080C0; text-decoration: none} 
 /* make the default for hyperlinks NO UNDERLINE */
 a { text-decoration: none; }
 /* Center Icons */
