--- a/sub/ctf/ctf_html.css
+++ b/sub/ctf/ctf_html.css
@@ -6,23 +6,21 @@ a:hover { color:#0080FF; }
 		a.wsp5e11d928:visited{ color:#000000; text-decoration: none} 
 		a.wsp5e11d928:active{ color:#0080FF; text-decoration: none} 
 		a.wsp5e11d928:hover{ color:#0080C0; text-decoration: none} 
+#table_3e8d9aab th {  } 
+#table_3e8d9aab td {  } 
 /* make the default for hyperlinks NO UNDERLINE */
 a { text-decoration: none; }
 /* Center Icons */
 .center { text-align: center; width: 100%; }body { background-color:#CECECE; padding:0;  margin: 0; }
 .textstyle1 { text-align:left; }
-#container_31a8e971 { vertical-align: top; position:relative; display: inline-block; width:100%; min-height:67px; background-color:#404040; position: fixed; z-index: 3000; }
-#container_31a8e971_padding { margin: 10px; display: block;  }
-#container_154e3907 { vertical-align: top; position:relative; display: inline-block; width:100%; min-height:40px; background:none;  }
-#container_154e3907_padding { margin: 10px; display: block;  }
+#container_75846dd1 { vertical-align: top; position:relative; display: inline-block; width:100%; min-height:66px; background-color:#404040; position: fixed; z-index: 3000; }
 .textstyle2 { text-align:center; }
-#container_15da6879 { vertical-align: top; position:relative; display: inline-block; width:3%; min-height:40px; background:none;  }
-#container_15da6879_padding { margin: 10px; display: block;  }
+#table_3e8d9aab { vertical-align: bottom; position:relative; display: inline-table; width:22%; height:65px; background:none; table-layout: fixed;  }
+#cell_4b8833a {  }
 .textstyle3 { font-size:12pt; font-family:'Century Gothic', CenturyGothic, AppleGothic, sans-serif; color:#FFFFFF;  }
-#container_6d7884ee { vertical-align: top; position:relative; display: inline-block; width:3%; min-height:40px; background:none;  }
-#container_6d7884ee_padding { margin: 10px; display: block;  }
-#container_7d037229 { vertical-align: top; position:relative; display: inline-block; width:5%; min-height:40px; background:none;  }
-#container_7d037229_padding { margin: 10px; display: block;  }
+#cell_3ae7ee26 {  }
+#cell_6847f1d0 {  }
+#cell_521a477f {  }
 #container_32d0e03e { vertical-align: top; position:relative; display: inline-block; width:100%; min-height:100px; background:none;  }
 #container_32d0e03e_padding { margin: 10px; display: block;  }
 #container_59b95f62 { vertical-align: top; position:relative; display: inline-block; width:100%; min-height:80px; background:none;  }
@@ -36,7 +34,6 @@ a { text-decoration: none; }
 #container_159311cd_padding { margin: 10px; display: block;  }
 #container_2be7bc8d { vertical-align: top; position:relative; display: inline-block; width:100%; min-height:47px; background:none;  }
 #container_2be7bc8d_padding { margin: 10px; display: block;  }
-#anchor_4cc3ae0c { vertical-align: bottom; position:relative; display: inline-block;  }
 .textstyle6 { font-size:20pt; font-family:Arial, Helvetica, sans-serif; color:#000000;  }
 #container_3fc821df { vertical-align: top; position:relative; display: inline-block; width:100%; min-height:521px; background:none;  }
 #container_3fc821df_padding { margin: 10px; display: block;  }
@@ -47,6 +44,5 @@ a { text-decoration: none; }
 #container_57c4570b_padding { margin: 10px; display: block;  }
 #container_5545c291 { vertical-align: top; position:relative; display: inline-block; width:100%; min-height:44px; background:none;  }
 #container_5545c291_padding { margin: 10px; display: block;  }
-#anchor_70a9d3b { vertical-align: bottom; position:relative; display: inline-block;  }
 #container_799ce7c0 { vertical-align: top; position:relative; display: inline-block; width:100%; min-height:30px; background:none;  }
 #container_799ce7c0_padding { margin: 10px; display: block;  }
