--- a/sub/ctf/ctf_html.css
+++ b/sub/ctf/ctf_html.css
@@ -40,9 +40,7 @@ a { text-decoration: none; }
 #img_6485017a { vertical-align: bottom; position:relative; display: inline-block; width:26%; background:none; height:auto;  }
 #img_a4a5bc0 { vertical-align: bottom; position:relative; display: inline-block; width:26%; background:none; height:auto;  }
 #img_45a28d37 { vertical-align: bottom; position:relative; display: inline-block; width:26%; background:none; height:auto;  }
-#container_57c4570b { vertical-align: top; position:relative; display: inline-block; width:100%; min-height:52px; background:none;  }
-#container_57c4570b_padding { margin: 10px; display: block;  }
-#container_5545c291 { vertical-align: top; position:relative; display: inline-block; width:100%; min-height:44px; background:none;  }
-#container_5545c291_padding { margin: 10px; display: block;  }
+#container_77609974 { vertical-align: top; position:relative; display: inline-block; width:100%; min-height:52px; background:none;  }
+#container_77609974_padding { margin: 10px; display: block;  }
 #container_799ce7c0 { vertical-align: top; position:relative; display: inline-block; width:100%; min-height:30px; background:none;  }
 #container_799ce7c0_padding { margin: 10px; display: block;  }
